# python-workspaces

./: .gitignore  notebooks.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
claude/: .env.sample  example_basic.py  example_langchain.py  example_search.py  example_tools.py  example_vision.py  pyproject.toml
demo/: calc.py  pyproject.toml
knowledge-distillation/: README.md  main.py  pyproject.toml  test_basic.py  test_inference.py  test_teacher.py
knowledge-distillation/knowledge_distillation/: __init__.py  distillation.py  models.py
langchain/: .env.sample  example_retrieve.py  langgraph_base.py  pyproject.toml  readme.md  summarize-web.py  summerize-web.py
llm_spider/: .gitignore  README.md  agent_voyage.py  path.py  pyproject.toml
mcp-memory/: README.md  pyproject.toml
mcp-memory/src/mcp_memory/: __init__.py  api.py  memory_server.py  models.py
mcp-memory/tests/: test_api.py  test_memory_server.py
multion/: main.py  pyproject.toml
playwright_for_llm/: main.py  mark_page.js  pyproject.toml
spider/: basic.py  pyproject.toml  screenshot.py  typed.py
src/: calc_test.py
