[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]
target-version = "py312"
line-length = 119

[tool.pytest.ini_options]
log_level = "DEBUG"
python_files = ["*_test.py"]
python_functions = ["test_*"]
