[tool.poetry]
name = "claude"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
anthropic = "^0.23.1"
langchain-anthropic = "^0.1.6"
langchain = "^0.1.14"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
langchain-openai = "^0.1.1"
tavily-python = "^0.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [".venv"]
line-length = 119

[tool.pytest.ini_options]
log_level = "DEBUG"
python_files = ["*.py"]
python_functions = ["test_*"]
