[tool.poetry]
name = "llm_spider"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "^0.1.14"
nest-asyncio = "^1.6.0"
playwright = "^1.42.0"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
graphviz = "^0.20.3"
langchain-openai = "^0.1.1"
langgraph = "^0.0.39"
ipython = "^8.23.0"
langchainhub = "^0.1.15"
playwright-stealth = "^1.0.6"
setuptools = "^69.2.0"
grandalf = "^0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [".venv"]
line-length = 119

[tool.pytest.ini_options]
log_level = "DEBUG"
python_files = ["*.py"]
python_functions = ["test_*"]
