[tool.poetry]
name = "multion-cookbook"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mem0ai = "^0.0.9"
openai = "^1.37.1"
multion = "^1.3.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
